objects/Advitya_Test_2__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advitya_Test 2</label>
    <nameField>
        <label>Advitya_Test 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>